feat: add file endpoint
